<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        />

    <EditText
        android:id="@+id/login_phonNumber_input"
        android:layout_below="@+id/login_applogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_below="@+id/login_phonNumber_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_password_input"
        android:layout_marginTop="5dp"
        >

        <CheckBox
            android:id="@+id/remember_me_chkb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimaryDark"
            app:cbd_strokeColor = "@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="17dp"
            />

        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginLeft="80dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="18dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/login"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/as_admin"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_btn"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="23dp"
        />

    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_an_admin"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_btn"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="23dp"
        android:visibility="invisible"
        />

</RelativeLayout>